# ha-pi-hole-v6

./: .gitignore  .opencommit-example  .orcommit.json-example  LICENSE  README.md  hacs.json  orcommit.json-example  pyproject.toml  requirements.txt
.claude/commands/: create-develop-pull-request.md  create-main-pull-request.md  suggest-commit-title.md
.devcontainer/: .env-example  Dockerfile  devcontainer-lock.json  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: stale.yaml  validate-for-hacs.yml
custom_components/pi_hole_v6/: __init__.py  api.py  binary_sensor.py  button.py  common.py  config_flow.py  const.py  device_tracker.py  entity.py  exceptions.py  helper.py  icons.json  manifest.json  number.py  sensor.py  strings.json  switch.py  update.py
custom_components/pi_hole_v6/translations/: cs.json  de.json  el.json  en.json  es.json  fr.json  nl.json  no.json  pl.json  pt-BR.json  ru.json  se.json  sk.json  sv.json  tr.json  uk.json
docs/: guide-additional-config-information.md  guide-configuring-refresh.md  guide-database-optimization.md  guide-explained-entities.md  guide-group-blocking.md  guide-network-device-tracking.md
scripts/: develop  lint  setup  update-requirements  update_requirements.py
templates/: configuration.yaml
