[tool.poetry]
authors = ["Bastien Gautier <contact@bastiengautier.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3",
]
description = "This custom integration restores compatibility between Home Assistant and Pi-hole, which is no longer supported by the native integration due to API changes. "
documentation = "https://github.com/bastgau/ha-pi-hole-v6"
homepage = "https://github.com/bastgau/ha-pi-hole-v6"
license = "MIT"
maintainers = ["Bastien Gautier <contact@bastiengautier.com>"]
name = "Pi-hole V6 for Home Assistant"
packages = []
readme = "README.md"
repository = "https://github.com/bastgau/ha-pi-hole-v6"
version = "0.0.0"

[tool.poetry.dependencies]
homeassistant = "2026.2.1"
python = ">=3.13,<3.14"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bastgau/ha-pi-hole-v6/issues"
Changelog = "https://github.com/bastgau/ha-pi-hole-v6/releases"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff.lint]
ignore = [
  "ANN401",  # Opiniated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "TID252",  # Relative imports
  "RUF012",  # Just broken
  "D202",    # No blank lines allowed after function docstring
  "D203",    # 1 blank line required before class docstring
  "D213",    # Multi-line docstring summary should start at the second line
  "D404",    # First word of the docstring should not be This
  "D406",    # Section name should end with a newline
  "D407",    # Section name underlining
  "D411",    # Missing blank line before section
  "E501",    # line too long
  "E731",    # do not assign a lambda expression, use a def
  "PLR2004", # Magic value used in comparison, consider replacing `xxx` with a constant variable
  "FBT001",  # Boolean default positional argument in function definition
  "FBT002",  # Boolean-typed positional argument in function definition
  "ARG002",  # Unused method argument: `kwargs`
  "PLR0911", # Too many return statements (19 > 6)
  "PLR0912", # Too many branches"
  "PLR0915", # Too many statements (58 > 50)"
  "BLE001",  # Do not catch blind exception: `Exception`
  "S110",    # `try`-`except`-`pass` detected, consider logging the exception"

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]
select = ["ALL"]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"homeassistant.helpers.area_registry" = "ar"
"homeassistant.helpers.config_validation" = "cv"
"homeassistant.helpers.device_registry" = "dr"
"homeassistant.helpers.entity_registry" = "er"
"homeassistant.helpers.issue_registry" = "ir"
voluptuous = "vol"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant"]
combine-as-imports = true

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# duplicate-code - unavoidable
# used-before-assignment - false positives with TYPE_CHECKING structures
disable = [
  "abstract-method",
  "duplicate-code",
  "format",
  "unexpected-keyword-arg",
  "used-before-assignment",
]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.14"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_decorators = true
# disallow_untyped_defs = true
# no_implicit_optional = true
# strict_optional = true
# warn_incomplete_stub = true
# warn_no_return = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unused_configs = true
# warn_unused_ignores = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff]
target-version = "py314"
line-length = 120
indent-width = 4
src = ["custom_components/pi_hole_v6"]
